--- a/Custom_Snippets.ipynb
+++ b/Custom_Snippets.ipynb
@@ -8,12 +8,11 @@
       "collapsed_sections": [
         "q7zf_LzJ45b5",
         "OWbTiL_T4m3G",
-        "TSowRXKV5BaY",
         "aqAn1KFHC_3t",
         "BaPIrLC16D6_"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO9sMhyfAZD0Zu0+0NNKNf+",
+      "authorship_tag": "ABX9TyOCdl1yHNyNW9Pqpk4+DWgg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -124,7 +123,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9t7UBjRo5GGo"
+        "id": "9t7UBjRo5GGo",
+        "outputId": "e26d0b42-7428-469a-8a18-9dab6ecb960b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 232
+        }
       },
       "source": [
         "\n",
@@ -151,8 +155,20 @@
         "print(\"\\n\" + \"Index\" + \"\\n\" + \"_\"*80)\n",
         "df.index"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-1a647b688d55>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtypes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -328,12 +344,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EALLPQr52x0v",
-        "outputId": "52b49084-4473-441e-e647-8dbb0a8c70f9",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        }
+        "id": "EALLPQr52x0v"
       },
       "source": [
         "''' Another great library for automatic EDA is AutoViz.\n",
@@ -349,88 +360,7 @@
         "report_2 = AV.AutoViz(os.path.join(home, 'shootings_wash_post.csv'))"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Collecting autoviz\n",
-            "  Downloading https://files.pythonhosted.org/packages/06/2d/8301752598960dbf92e73c01779cc5d56e2ef6d47cb8d23ff139c0144c93/autoviz-0.0.68-py3-none-any.whl\n",
-            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.6/dist-packages (from autoviz) (0.22.2.post1)\n",
-            "Requirement already satisfied: ipython in /usr/local/lib/python3.6/dist-packages (from autoviz) (5.5.0)\n",
-            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.6/dist-packages (from autoviz) (3.2.2)\n",
-            "Requirement already satisfied: seaborn in /usr/local/lib/python3.6/dist-packages (from autoviz) (0.10.1)\n",
-            "Requirement already satisfied: jupyter in /usr/local/lib/python3.6/dist-packages (from autoviz) (1.0.0)\n",
-            "Requirement already satisfied: pandas in /usr/local/lib/python3.6/dist-packages (from autoviz) (1.0.5)\n",
-            "Requirement already satisfied: numpy>=1.11.0 in /usr/local/lib/python3.6/dist-packages (from scikit-learn->autoviz) (1.18.5)\n",
-            "Requirement already satisfied: scipy>=0.17.0 in /usr/local/lib/python3.6/dist-packages (from scikit-learn->autoviz) (1.4.1)\n",
-            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from scikit-learn->autoviz) (0.16.0)\n",
-            "Requirement already satisfied: pickleshare in /usr/local/lib/python3.6/dist-packages (from ipython->autoviz) (0.7.5)\n",
-            "Requirement already satisfied: pexpect; sys_platform != \"win32\" in /usr/local/lib/python3.6/dist-packages (from ipython->autoviz) (4.8.0)\n",
-            "Requirement already satisfied: pygments in /usr/local/lib/python3.6/dist-packages (from ipython->autoviz) (2.1.3)\n",
-            "Requirement already satisfied: prompt-toolkit<2.0.0,>=1.0.4 in /usr/local/lib/python3.6/dist-packages (from ipython->autoviz) (1.0.18)\n",
-            "Requirement already satisfied: setuptools>=18.5 in /usr/local/lib/python3.6/dist-packages (from ipython->autoviz) (49.6.0)\n",
-            "Requirement already satisfied: decorator in /usr/local/lib/python3.6/dist-packages (from ipython->autoviz) (4.4.2)\n",
-            "Requirement already satisfied: traitlets>=4.2 in /usr/local/lib/python3.6/dist-packages (from ipython->autoviz) (4.3.3)\n",
-            "Requirement already satisfied: simplegeneric>0.8 in /usr/local/lib/python3.6/dist-packages (from ipython->autoviz) (0.8.1)\n",
-            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib->autoviz) (2.8.1)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib->autoviz) (1.2.0)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib->autoviz) (2.4.7)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.6/dist-packages (from matplotlib->autoviz) (0.10.0)\n",
-            "Requirement already satisfied: ipywidgets in /usr/local/lib/python3.6/dist-packages (from jupyter->autoviz) (7.5.1)\n",
-            "Requirement already satisfied: jupyter-console in /usr/local/lib/python3.6/dist-packages (from jupyter->autoviz) (5.2.0)\n",
-            "Requirement already satisfied: nbconvert in /usr/local/lib/python3.6/dist-packages (from jupyter->autoviz) (5.6.1)\n",
-            "Requirement already satisfied: notebook in /usr/local/lib/python3.6/dist-packages (from jupyter->autoviz) (5.3.1)\n",
-            "Requirement already satisfied: qtconsole in /usr/local/lib/python3.6/dist-packages (from jupyter->autoviz) (4.7.6)\n",
-            "Requirement already satisfied: ipykernel in /usr/local/lib/python3.6/dist-packages (from jupyter->autoviz) (4.10.1)\n",
-            "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/dist-packages (from pandas->autoviz) (2018.9)\n",
-            "Requirement already satisfied: ptyprocess>=0.5 in /usr/local/lib/python3.6/dist-packages (from pexpect; sys_platform != \"win32\"->ipython->autoviz) (0.6.0)\n",
-            "Requirement already satisfied: wcwidth in /usr/local/lib/python3.6/dist-packages (from prompt-toolkit<2.0.0,>=1.0.4->ipython->autoviz) (0.2.5)\n",
-            "Requirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.6/dist-packages (from prompt-toolkit<2.0.0,>=1.0.4->ipython->autoviz) (1.15.0)\n",
-            "Requirement already satisfied: ipython-genutils in /usr/local/lib/python3.6/dist-packages (from traitlets>=4.2->ipython->autoviz) (0.2.0)\n",
-            "Requirement already satisfied: widgetsnbextension~=3.5.0 in /usr/local/lib/python3.6/dist-packages (from ipywidgets->jupyter->autoviz) (3.5.1)\n",
-            "Requirement already satisfied: nbformat>=4.2.0 in /usr/local/lib/python3.6/dist-packages (from ipywidgets->jupyter->autoviz) (5.0.7)\n",
-            "Requirement already satisfied: jupyter-client in /usr/local/lib/python3.6/dist-packages (from jupyter-console->jupyter->autoviz) (5.3.5)\n",
-            "Requirement already satisfied: entrypoints>=0.2.2 in /usr/local/lib/python3.6/dist-packages (from nbconvert->jupyter->autoviz) (0.3)\n",
-            "Requirement already satisfied: pandocfilters>=1.4.1 in /usr/local/lib/python3.6/dist-packages (from nbconvert->jupyter->autoviz) (1.4.2)\n",
-            "Requirement already satisfied: jupyter-core in /usr/local/lib/python3.6/dist-packages (from nbconvert->jupyter->autoviz) (4.6.3)\n",
-            "Requirement already satisfied: defusedxml in /usr/local/lib/python3.6/dist-packages (from nbconvert->jupyter->autoviz) (0.6.0)\n",
-            "Requirement already satisfied: jinja2>=2.4 in /usr/local/lib/python3.6/dist-packages (from nbconvert->jupyter->autoviz) (2.11.2)\n",
-            "Requirement already satisfied: testpath in /usr/local/lib/python3.6/dist-packages (from nbconvert->jupyter->autoviz) (0.4.4)\n",
-            "Requirement already satisfied: bleach in /usr/local/lib/python3.6/dist-packages (from nbconvert->jupyter->autoviz) (3.1.5)\n",
-            "Requirement already satisfied: mistune<2,>=0.8.1 in /usr/local/lib/python3.6/dist-packages (from nbconvert->jupyter->autoviz) (0.8.4)\n",
-            "Requirement already satisfied: tornado>=4 in /usr/local/lib/python3.6/dist-packages (from notebook->jupyter->autoviz) (5.1.1)\n",
-            "Requirement already satisfied: terminado>=0.8.1 in /usr/local/lib/python3.6/dist-packages (from notebook->jupyter->autoviz) (0.8.3)\n",
-            "Requirement already satisfied: Send2Trash in /usr/local/lib/python3.6/dist-packages (from notebook->jupyter->autoviz) (1.5.0)\n",
-            "Requirement already satisfied: pyzmq>=17.1 in /usr/local/lib/python3.6/dist-packages (from qtconsole->jupyter->autoviz) (19.0.2)\n",
-            "Requirement already satisfied: qtpy in /usr/local/lib/python3.6/dist-packages (from qtconsole->jupyter->autoviz) (1.9.0)\n",
-            "Requirement already satisfied: jsonschema!=2.5.0,>=2.4 in /usr/local/lib/python3.6/dist-packages (from nbformat>=4.2.0->ipywidgets->jupyter->autoviz) (2.6.0)\n",
-            "Requirement already satisfied: MarkupSafe>=0.23 in /usr/local/lib/python3.6/dist-packages (from jinja2>=2.4->nbconvert->jupyter->autoviz) (1.1.1)\n",
-            "Requirement already satisfied: webencodings in /usr/local/lib/python3.6/dist-packages (from bleach->nbconvert->jupyter->autoviz) (0.5.1)\n",
-            "Requirement already satisfied: packaging in /usr/local/lib/python3.6/dist-packages (from bleach->nbconvert->jupyter->autoviz) (20.4)\n",
-            "Installing collected packages: autoviz\n",
-            "Successfully installed autoviz-0.0.68\n",
-            "Imported AutoViz_Class version: 0.0.68. Call using: \n",
-            "    from autoviz.AutoViz_Class import AutoViz_Class\n",
-            "    AV = AutoViz_Class()\n",
-            "    AutoViz(filename, sep=',', depVar='', dfte=None, header=0, verbose=0,\n",
-            "                            lowess=False,chart_format='svg',max_rows_analyzed=150000,max_cols_analyzed=30)\n",
-            "            \n",
-            "To remove previous versions, perform 'pip uninstall autoviz'\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-2-348cb7b868fd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m# Let's now visualize the plots generated by AutoViz.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mreport_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAV\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAutoViz\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhome\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'shootings_wash_post.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -444,12 +374,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "y_2QLAuU29xV",
-        "outputId": "904bec98-f302-4912-bb95-86d7359db453",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 198
-        }
+        "id": "y_2QLAuU29xV"
       },
       "source": [
         "#!pip install pandas-profiling\n",
@@ -458,19 +383,7 @@
         "report = pandas_profiling.ProfileReport(df)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-b86e3ddea89b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas_profiling\u001b[0m \u001b[0;31m# library for automatic EDA\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mreport\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpandas_profiling\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mProfileReport\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1001,12 +914,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ioFLuGUNdmLT",
-        "outputId": "70105994-035a-413e-8e51-ac1e8e7c24a4",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 658
-        }
+        "id": "ioFLuGUNdmLT"
       },
       "source": [
         "help(map)\n",
@@ -1014,50 +922,7 @@
         "dir(map)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Help on class map in module builtins:\n",
-            "\n",
-            "class map(object)\n",
-            " |  map(func, *iterables) --> map object\n",
-            " |  \n",
-            " |  Make an iterator that computes the function using arguments from\n",
-            " |  each of the iterables.  Stops when the shortest iterable is exhausted.\n",
-            " |  \n",
-            " |  Methods defined here:\n",
-            " |  \n",
-            " |  __getattribute__(self, name, /)\n",
-            " |      Return getattr(self, name).\n",
-            " |  \n",
-            " |  __iter__(self, /)\n",
-            " |      Implement iter(self).\n",
-            " |  \n",
-            " |  __new__(*args, **kwargs) from builtins.type\n",
-            " |      Create and return a new object.  See help(type) for accurate signature.\n",
-            " |  \n",
-            " |  __next__(self, /)\n",
-            " |      Implement next(self).\n",
-            " |  \n",
-            " |  __reduce__(...)\n",
-            " |      Return state information for pickling.\n",
-            "\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-17-f1d7258171f2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mhelp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'apply' is not defined"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1177,7 +1042,7 @@
         "import time\n",
         "\n",
         "#Version 1\n",
-        "#url = \"https://www.odlo.com/ch/de/herren/kleidung/funktionsunterwaesche-baselayer/\"\n",
+        "#url = \"xxx\"\n",
         "#html = requests.get(url)\n",
         "\n",
         "#Version 2\n",
@@ -1322,26 +1187,6 @@
       "source": [
         "for column in df_train.columns:\n",
         "    print(column, len(df_train[column].dropna().unique()))"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "074IET_8Psl3"
-      },
-      "source": [
-        "# Create dataframe in pandas"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "dLCX5cupPwR3"
-      },
-      "source": [
-        ""
       ],
       "execution_count": null,
       "outputs": []
