Created with Colaboratory

--- a/Custom_Snippets.ipynb
+++ b/Custom_Snippets.ipynb
@@ -12,7 +12,7 @@
         "BaPIrLC16D6_"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOCdl1yHNyNW9Pqpk4+DWgg",
+      "authorship_tag": "ABX9TyOou9JYVMG1ATYkSK5ckJtO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,9 +67,14 @@
       },
       "source": [
         "from google.colab import files\n",
+        "from google.colab import drive\n",
         "\n",
-        "df.to_csv('df.csv') \n",
-        "files.download('df.csv')"
+        "drive.mount('/drive')\n",
+        "\n",
+        "#df.to_csv('df.csv') \n",
+        "#files.download('df.csv')\n",
+        "\n",
+        "!ls \"/drive/My Drive\""
       ],
       "execution_count": null,
       "outputs": []
@@ -123,12 +128,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9t7UBjRo5GGo",
-        "outputId": "e26d0b42-7428-469a-8a18-9dab6ecb960b",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 232
-        }
+        "id": "9t7UBjRo5GGo"
       },
       "source": [
         "\n",
@@ -155,20 +155,8 @@
         "print(\"\\n\" + \"Index\" + \"\\n\" + \"_\"*80)\n",
         "df.index"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-1a647b688d55>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtypes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
