--- a/Python_cheat_sheet.ipynb
+++ b/Python_cheat_sheet.ipynb
@@ -43,11 +43,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import numpy as np"
       ]
     },
     {
@@ -71,6 +72,7 @@
         }
       ],
       "source": [
+        "# Specify values for each column\n",
         "df = pd.DataFrame(\n",
         "{\"a\" : [4 ,5, 6],\n",
         "\"b\" : [7, 8, 9],\n",
@@ -79,6 +81,57 @@
         ")\n",
         "\n",
         "print(df)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "   a  b   c\n1  4  7  10\n2  5  8  11\n3  6  9  12\n"
+        }
+      ],
+      "source": [
+        "# Specify values for each row\n",
+        "df = pd.DataFrame(\n",
+        "[[4, 7, 10],\n",
+        "[5, 8, 11],\n",
+        "[6, 9, 12]],\n",
+        "index=[1, 2, 3],\n",
+        "columns=['a', 'b', 'c']\n",
+        ")\n",
+        "print(df)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "     a  b   c\nn v          \nd 1  4  7  10\n  2  5  8  11\ne 2  6  9  12\n"
+        }
+      ],
+      "source": [
+        "#Create DataFrame with a MultiIndex\n",
+        "df = pd.DataFrame(\n",
+        "{\"a\" : [4 ,5, 6],\n",
+        "\"b\" : [7, 8, 9],\n",
+        "\"c\" : [10, 11, 12]},\n",
+        "index = pd.MultiIndex.from_tuples(\n",
+        "[('d',1),('d',2),('e',2)],\n",
+        "names=['n','v']))\n",
+        "\n",
+        "print(df)\n"
       ]
     },
     {
