--- a/Python_cheat_sheet.ipynb
+++ b/Python_cheat_sheet.ipynb
@@ -6,7 +6,6 @@
       "name": "Python_cheat_sheet.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPFi1K4ckoVJgs8SabtykUT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,51 +25,55 @@
       ]
     },
     {
-      "source": [
-        "# Python cheat sheet"
-      ],
       "cell_type": "markdown",
       "metadata": {
         "id": "S6SH3HGoC0XH"
-      }
-    },
-    {
+      },
       "source": [
-        "## Libraries"
-      ],
-      "cell_type": "markdown",
-      "metadata": {}
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 18,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "import pandas as pd\n",
-        "import numpy as np"
+        "# Python cheat sheet"
       ]
     },
     {
-      "source": [
-        "## Creating DataFrames"
-      ],
       "cell_type": "markdown",
-      "metadata": {}
+      "metadata": {
+        "id": "We8SJoO26vHh"
+      },
+      "source": [
+        "## Libraries"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
       "metadata": {
-        "tags": []
+        "id": "QwoxOSog6vHi"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": "   a  b   c\n1  4  7  10\n2  5  8  11\n3  6  9  12\n"
-        }
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np"
       ],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N9lWMpJN6vHl"
+      },
+      "source": [
+        "## Creating DataFrames"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "tags": [],
+        "id": "dx3cnLEA6vHm",
+        "outputId": "f7a5e217-3dee-4831-e492-f752ca8078ae",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 142
+        }
+      },
       "source": [
         "# Specify values for each column\n",
         "df = pd.DataFrame(\n",
@@ -80,22 +83,84 @@
         "index = [1, 2, 3]\n",
         ")\n",
         "\n",
-        "print(df)"
+        "display(df)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>a</th>\n",
+              "      <th>b</th>\n",
+              "      <th>c</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>4</td>\n",
+              "      <td>7</td>\n",
+              "      <td>10</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>5</td>\n",
+              "      <td>8</td>\n",
+              "      <td>11</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>6</td>\n",
+              "      <td>9</td>\n",
+              "      <td>12</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   a  b   c\n",
+              "1  4  7  10\n",
+              "2  5  8  11\n",
+              "3  6  9  12"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
       "metadata": {
-        "tags": []
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": "   a  b   c\n1  4  7  10\n2  5  8  11\n3  6  9  12\n"
+        "tags": [],
+        "id": "vhrOlKz56vHp",
+        "outputId": "fd987059-4d0b-4d19-a6d4-d5002cc0e91e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 142
         }
-      ],
+      },
       "source": [
         "# Specify values for each row\n",
         "df = pd.DataFrame(\n",
@@ -105,22 +170,84 @@
         "index=[1, 2, 3],\n",
         "columns=['a', 'b', 'c']\n",
         ")\n",
-        "print(df)"
+        "display(df)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>a</th>\n",
+              "      <th>b</th>\n",
+              "      <th>c</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>4</td>\n",
+              "      <td>7</td>\n",
+              "      <td>10</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>5</td>\n",
+              "      <td>8</td>\n",
+              "      <td>11</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>6</td>\n",
+              "      <td>9</td>\n",
+              "      <td>12</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   a  b   c\n",
+              "1  4  7  10\n",
+              "2  5  8  11\n",
+              "3  6  9  12"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
       "metadata": {
-        "tags": []
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": "     a  b   c\nn v          \nd 1  4  7  10\n  2  5  8  11\ne 2  6  9  12\n"
+        "tags": [],
+        "id": "J_ezQAub6vHs",
+        "outputId": "95e269b0-d10a-4a82-e369-0bfe8a5bb94f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 173
         }
-      ],
+      },
       "source": [
         "#Create DataFrame with a MultiIndex\n",
         "df = pd.DataFrame(\n",
@@ -131,45 +258,142 @@
         "[('d',1),('d',2),('e',2)],\n",
         "names=['n','v']))\n",
         "\n",
-        "print(df)\n"
+        "display(df)\n"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th>a</th>\n",
+              "      <th>b</th>\n",
+              "      <th>c</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>n</th>\n",
+              "      <th>v</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th rowspan=\"2\" valign=\"top\">d</th>\n",
+              "      <th>1</th>\n",
+              "      <td>4</td>\n",
+              "      <td>7</td>\n",
+              "      <td>10</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>5</td>\n",
+              "      <td>8</td>\n",
+              "      <td>11</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>e</th>\n",
+              "      <th>2</th>\n",
+              "      <td>6</td>\n",
+              "      <td>9</td>\n",
+              "      <td>12</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     a  b   c\n",
+              "n v          \n",
+              "d 1  4  7  10\n",
+              "  2  5  8  11\n",
+              "e 2  6  9  12"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
+      "metadata": {
+        "id": "zR2KKOQY6vHu",
+        "outputId": "b609d08c-3385-41a9-9038-7d65d12875af",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
       "source": [
         "some_list = ['foo', 'bar', 'baz']\n",
         "\n",
-        "In [85]: mapping = {}\n",
+        "mapping = {}\n",
+        "for i, v in enumerate(some_list):\n",
+        "  mapping[v] = i\n",
         "\n",
-        "In [86]: for i, v in enumerate(some_list):\n",
-        "   ....:     mapping[v] = i\n",
-        "\n",
-        "In [87]: mapping\n",
-        "Out[87]: {'bar': 1, 'baz': 2, 'foo': 0}"
+        "mapping\n"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'bar': 1, 'baz': 2, 'foo': 0}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "p7wM_2oT6vH0"
+      },
       "source": [
         "## Datatypes: categorical"
-      ],
-      "cell_type": "markdown",
-      "metadata": {}
+      ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mQi1yl7x6vH0"
+      },
       "source": [
         "### Ordered categories"
-      ],
-      "cell_type": "markdown",
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
+      "metadata": {
+        "id": "SBRP8mZd6vH0"
+      },
       "source": [
         "# Create a list of weather ratings in logical order\n",
         "category_order = ['good', 'bad', 'worse']\n",
@@ -179,13 +403,15 @@
         "\n",
         "# Examine the head of 'rating'\n",
         "print(weather.rating.head())"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
+      "metadata": {
+        "id": "HdZay0de6vH3"
+      },
       "source": [
         "# Count the unique values in 'bad_conditions' and sort the index\n",
         "print(weather.bad_conditions.value_counts().sort_index())\n",
@@ -198,7 +424,9 @@
         "\n",
         "# Count the unique values in 'rating'\n",
         "print(weather.rating.value_counts())"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
